--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11623,7 +11623,16 @@ span.close_btt {
   }
 }
 
-
+@media (min-width: 320px) {
+  .view-front-end-global-search .view-content .itg-search-list > .search-detail,
+  .view-front-end-global-search .view-content .itg-search-list > .social-share{
+    overflow: auto;
+    padding-left: 154px;
+  }
+  .view-front-end-global-search .view-content .itg-search-list > .views-field{
+    padding-left: 154px;
+  }
+}
 
 @media (min-width: 768px) {
   .modal-dialog {
@@ -11639,6 +11648,14 @@ span.close_btt {
   }
 }
 @media (min-width: 992px) {
+  .view-front-end-global-search .view-content .itg-search-list > .search-detail,
+  .view-front-end-global-search .view-content .itg-search-list > .social-share{
+    overflow: auto;
+    padding-left: 180px;
+  }
+  .view-front-end-global-search .view-content .itg-search-list > .views-field{
+    padding-left: 180px;
+  }
   .modal-lg {
     width: 900px;
   }
