--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11848,3 +11848,8 @@ fieldset#edit-xmlsitemap{
     }
   }
 }
+.view-id-section_wise_content_ordering_list.view-display-id-page{
+  .view-content, .item-list{
+    @extend .hide;
+  }
+} 
