--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -4996,6 +4996,10 @@ div.node{
         margin: 0 5px;
       }
       .fa-times{cursor: pointer; color: red;}
+      .rc-bottom{
+        font-size: 13px;
+        padding: 5px 0 0;
+      }
     }
     .ui-state-default{
       span.item-value{cursor: default;}
