--- a/sites/all/modules/custom/itg_auto_search/css/itg_auto_search.css
+++ b/sites/all/modules/custom/itg_auto_search/css/itg_auto_search.css
@@ -19,7 +19,7 @@
 
 /* Compare table Css */
 .grybg_background {border-top:15px solid #595758;padding-bottom:0px; padding-right:0px!important; padding-left:0px!important; height: auto;margin-top: 18px;
- float: left; width:100%; float:left}
+ float: left; width:100%; float:left;background: #dedcdd;}
 .left-table, .right-table {background: #dedcdd;width: 46%;padding-left: 4%}
 .right-table {float: right}
 .break-point {height: 100px;}
@@ -69,6 +69,7 @@
    .left-table, .right-table{ width:25%; float: left; }
    .tableCompareHead table th,.tableComparedata table td{ height:65px; }
    .sidebars{ float: left; }
+   section.sidebar .block-itg-ads{ padding:0px!important; }
 
 
  }
