resolve ui issues

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -14229,7 +14229,7 @@ span.close_btt {
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
   .view-front-end-global-search .view-content .itg-search-list > .social-share {
-    overflow: auto;
+    overflow: initial;
     padding-left: 154px;
   }
 
@@ -14255,7 +14255,7 @@ span.close_btt {
 @media (min-width: 992px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
   .view-front-end-global-search .view-content .itg-search-list > .social-share {
-    overflow: auto;
+    overflow: initial;
     padding-left: 180px;
   }
 
