ITG-2289 #time 2h #comment added sidescroll for special top news.

--- a/sites/all/themes/itg/css/layout-manager.css
+++ b/sites/all/themes/itg/css/layout-manager.css
@@ -3465,3 +3465,28 @@ img {
   font-size: 16px;
   /* background: #ddd; */
 }
+
+.itg-layout-container.default-section .auto-block-2 {
+  position: relative;
+}
+.itg-layout-container.default-section .auto-block-2 .special-top-news {
+  overflow: hidden;
+  height: 100%;
+}
+.itg-layout-container.default-section .auto-block-2 .special-top-news .widget-title {
+  position: absolute;
+}
+.itg-layout-container.default-section .auto-block-2 .special-top-news .itg-listing-wrapper {
+  margin-top: 22px !important;
+  overflow: auto;
+  height: 100%;
+}
+.itg-layout-container.default-section .auto-block-2 .special-top-news .itg-listing-wrapper ul {
+  padding: 0 !important;
+}
+.itg-layout-container.default-section .itg-listing, .itg-layout-container.default-section .featured-news {
+  border: none;
+}
+.itg-layout-container.default-section .itg-top-section .top-colum-2 .droppable {
+  margin-bottom: 0;
+}
