--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11622,6 +11622,12 @@ span.close_btt {
     .mCSB_scrollTools{width: 3px;}
   }
 }
+.special-top-news{
+  .itg-listing-wrapper{
+    .mCSB_inside>.mCSB_container{margin-right: 0;}
+    .mCSB_scrollTools{width: 3px;}
+  }
+}
 .story-section .story-right .description{
   .social-share.social-share-embed{
     @include social-share;
