--- a/sites/all/modules/custom/itg_be_lucky_today/css/itg_be_lucky_today.css
+++ b/sites/all/modules/custom/itg_be_lucky_today/css/itg_be_lucky_today.css
@@ -303,3 +303,4 @@ select, input[type="password"]{ width:100px;}
 #modal-content strong h3{    display: block; font-size: 1.8em; font-weight: bold; }
 #modal-content strong p { display: block;font-weight: normal; color:#000; margin-top:15px; font-size:14px; line-height:24px;}
 #modal-content{width: 100%!important;height: 95%!important;border: 0px;border-radius: 0;}
+/*.page-be-lucky-today .form-item-age label{display:none;}*/
