--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -20,7 +20,7 @@ input[type="file"], input[type="submit"], input[type="text"]{
   appearance: none;
 }
 
-[id="views-exposed-form-front-end-global-search-page"]{
+[id*="views-exposed-form-front-end-global-search-page"]{
     .views-exposed-form{
         #edit-keyword-wrapper{
             width: 100%;
