--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11671,7 +11671,13 @@ span.close_btt {
     }
   }
 }
-
+.blog-description{
+  p{
+    font-size: 15px;
+    line-height: 27px;
+    padding: 10px 0;
+  }
+}
 
 
 
